# 381903-02

./: Лабораторная Разбор арифметических выражений.pptx
mp2-lab3-arithmetic-main/: CMakeLists.txt  README.md
mp2-lab3-arithmetic-main/include/: postfix.h  stack.h
mp2-lab3-arithmetic-main/samples/: sample_postfix.cpp
mp2-lab3-arithmetic-main/src/: postfix.cpp
mp2-lab3-arithmetic-main/test/: test_tpostfix.cpp  test_tstack.cpp
mp2-lab5-polynomial/: CMakeLists.txt  README.md
mp2-lab5-polynomial/include/: list.h  monom.h  node.h  polynomial.h
mp2-lab5-polynomial/samples/: sample_polynomial.cpp
mp2-lab5-polynomial/test/: CMakeLists.txt  test_list.cpp  test_main.cpp
